tests/ui/consts/static-default-lifetime/elided-lifetime.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/elided-lifetime.rs:4:19
   |
LL |     const STATIC: &str = "";
   |                   ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL ~ impl<'a> Foo<'_> {
LL ~     const STATIC: &'a str = "";
   |

error[E0106]: missing lifetime specifier
  --> $DIR/elided-lifetime.rs:13:19
   |
LL |     const STATIC: &str = "";
   |                   ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL ~ impl<'a> Bar for Foo<'_> {
LL ~     const STATIC: &'a str = "";
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0106`.
